[package]
name = "ITO-ITO"
version = "2.1.14"
authors = ["larry <gm@larry.engineer>", "PFC <ITO-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/IDTOKENONE/ITO-contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0", features = ["staking"] }
cw2= "1.0.0"
cw20 = "1.0.0"
cw20-base = { version = "1.0.0", features = ["library"] }
cw-storage-plus = "0.13"
ITO-ITO = { path = "../../packages/steak" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
ITO-fee-split = "0.2.3"
#[dev-dependencies]
#serde = { version = "1.0.103", default-features = false, features = ["derive"] }
